--- a/app/src/main/res/layout/bottom_sheet_honesty_pledge.xml
+++ b/app/src/main/res/layout/bottom_sheet_honesty_pledge.xml
@@ -6,8 +6,16 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingStart="@dimen/base_margin_triple"
+    android:paddingTop="@dimen/base_margin"
     android:paddingEnd="@dimen/base_margin_triple"
     android:paddingBottom="@dimen/base_margin_triple">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:contentDescription="@null"
+        android:src="@drawable/bottom_sheet_handle" />
 
     <TextView
         android:layout_width="wrap_content"
