--- a/app/src/main/res/layout/referral_more_info_bottom_sheet.xml
+++ b/app/src/main/res/layout/referral_more_info_bottom_sheet.xml
@@ -7,15 +7,22 @@
     android:background="@drawable/bottom_sheet_dialog_no_title_fragment_background"
     android:orientation="vertical"
     android:paddingStart="@dimen/base_margin_triple"
-    android:paddingTop="@dimen/base_margin_double"
+    android:paddingTop="@dimen/base_margin"
     android:paddingEnd="@dimen/base_margin_triple"
     android:paddingBottom="@dimen/peril_bottom_extra_spacing">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:contentDescription="@null"
+        android:src="@drawable/bottom_sheet_handle" />
 
     <TextView
         style="@style/Headline.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/base_margin"
+        android:layout_marginTop="@dimen/base_margin_double"
         android:text="@string/REFERRAL_PROGRESS_MORE_INFO_HEADLINE" />
 
     <TextView
