Spruce up trustly screen slightly

--- a/app/src/main/res/layout/activity_trustly.xml
+++ b/app/src/main/res/layout/activity_trustly.xml
@@ -24,20 +24,22 @@
             android:id="@+id/resultIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="120dp"
             android:contentDescription="@null"
+            app:layout_constraintBottom_toTopOf="@id/resultTitle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
             tools:src="@drawable/icon_success" />
 
         <TextView
             android:id="@+id/resultTitle"
+            style="@style/TrustlyTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="@dimen/base_margin_triple"
             android:gravity="center"
-            android:theme="@style/TrustlyTitle"
+            app:layout_constraintBottom_toTopOf="@id/resultParagraph"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/resultIcon"
@@ -45,13 +47,14 @@
 
         <TextView
             android:id="@+id/resultParagraph"
+            style="@style/TrustlyParagraph"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="@dimen/base_margin_triple"
             android:gravity="center"
-            android:paddingStart="24dp"
-            android:paddingEnd="24dp"
-            android:theme="@style/TrustlyParagraph"
+            android:paddingStart="@dimen/base_margin_triple"
+            android:paddingEnd="@dimen/base_margin_triple"
+            app:layout_constraintBottom_toTopOf="@id/resultClose"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/resultTitle"
@@ -59,12 +62,12 @@
 
         <Button
             android:id="@+id/resultClose"
+            style="@style/HedvigButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:background="@drawable/button_primary"
+            android:layout_marginTop="@dimen/base_margin_triple"
             android:text="@string/PROFILE_TRUSTLY_CLOSE"
-            android:theme="@style/HedvigButton"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/resultParagraph"
