--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -17,42 +17,68 @@
             layout="@layout/loading_spinner"
             tools:visibility="gone" />
 
-        <LinearLayout
-            android:id="@+id/directDebitNeedsSetup"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/infoBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/base_margin_triple"
             android:layout_marginTop="@dimen/base_margin_double"
             android:layout_marginEnd="@dimen/base_margin_triple"
             android:background="@drawable/rounded_corners_background_light_gray"
-            android:gravity="center"
-            android:orientation="vertical"
             android:padding="@dimen/base_margin_double"
             android:visibility="gone"
             app:layout_constraintTop_toTopOf="parent"
             tools:visibility="visible">
 
+            <ImageButton
+                android:id="@+id/infoBoxClose"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:contentDescription="@string/DASHBOARD_INFO_BOX_CLOSE_DESCRIPTION"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_close"
+                tools:visibility="visible" />
+
             <TextView
+                android:id="@+id/infoBoxTitle"
+                style="@style/Headline.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@string/DASHBOARD_SETUP_DIRECT_DEBIT_TITLE" />
+
+            <TextView
+                android:id="@+id/infoBoxText"
                 style="@style/Body.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/base_margin"
                 android:fontFamily="@font/circular_book"
                 android:gravity="center"
-                android:text="@string/DASHBOARD_DIRECT_DEBIT_STATUS_NEED_SETUP_DESCRIPTION" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/infoBoxTitle"
+                tools:text="@string/DASHBOARD_DIRECT_DEBIT_STATUS_NEED_SETUP_DESCRIPTION" />
 
             <Button
-                android:id="@+id/directDebitConnectButton"
-                style="?android:attr/borderlessButtonStyle"
+                android:id="@+id/infoBoxButton"
+                style="@style/HedvigButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom|center_horizontal"
                 android:layout_marginTop="@dimen/base_margin_double"
-                android:background="@drawable/button_border_purple"
-                android:text="@string/DASHBOARD_DIRECT_DEBIT_STATUS_NEED_SETUP_BUTTON_LABEL"
-                android:textColor="@color/purple"
-                android:theme="@style/HedvigButton" />
+                android:backgroundTint="@color/purple"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/infoBoxText"
+                tools:text="@string/DASHBOARD_DIRECT_DEBIT_STATUS_NEED_SETUP_BUTTON_LABEL" />
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
             android:id="@+id/insuranceActive"
@@ -62,7 +88,7 @@
             android:layout_marginTop="@dimen/base_margin_double"
             android:gravity="center_vertical"
             android:visibility="gone"
-            app:layout_constraintTop_toBottomOf="@id/directDebitNeedsSetup"
+            app:layout_constraintTop_toBottomOf="@id/infoBox"
             tools:ignore="UseCompoundDrawables"
             tools:visibility="visible">
 
