--- a/app/src/debug/res/layout/activity_development.xml
+++ b/app/src/debug/res/layout/activity_development.xml
@@ -1,88 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".DevelopmentActivity"
-    tools:ignore="HardcodedText">
+    android:layout_height="wrap_content">
 
-    <TextView
-        style="@style/Header.Large"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/base_margin_triple"
-        android:gravity="center_horizontal"
-        android:text="Hedvig Development Screen" />
+        android:orientation="vertical"
+        tools:context=".DevelopmentActivity"
+        tools:ignore="HardcodedText">
 
-    <Button
-        android:id="@+id/openWhatsNew"
-        style="@style/HedvigButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/base_margin_double"
-        android:backgroundTint="@color/purple"
-        android:text="Open What's new screen" />
+        <TextView
+            style="@style/Header.Large"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/base_margin_triple"
+            android:gravity="center_horizontal"
+            android:text="Hedvig Development Screen" />
 
-    <Button
-        android:id="@+id/openNativeChat"
-        style="@style/HedvigButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/base_margin_double"
-        android:backgroundTint="@color/purple"
-        android:text="Open native chat screen" />
+        <Button
+            android:id="@+id/openWhatsNew"
+            style="@style/HedvigButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/base_margin_double"
+            android:backgroundTint="@color/purple"
+            android:text="Open What's new screen" />
 
-    <Button
-        android:id="@+id/openNativeOffer"
-        style="@style/HedvigButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/base_margin_double"
-        android:backgroundTint="@color/purple"
-        android:text="Open native offer screen" />
+        <Button
+            android:id="@+id/openNativeChat"
+            style="@style/HedvigButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/base_margin_double"
+            android:backgroundTint="@color/purple"
+            android:text="Open native chat screen" />
 
-    <Button
-        android:id="@+id/openAlert"
-        style="@style/HedvigButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/base_margin_double"
-        android:backgroundTint="@color/purple"
-        android:text="Open an alert" />
+        <Button
+            android:id="@+id/openNativeOffer"
+            style="@style/HedvigButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/base_margin_double"
+            android:backgroundTint="@color/purple"
+            android:text="Open native offer screen" />
 
-    <Button
-        android:id="@+id/openLoggedIn"
-        style="@style/HedvigButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/base_margin_double"
-        android:backgroundTint="@color/purple"
-        android:text="Open an logged in with Welcome Screen" />
+        <Button
+            android:id="@+id/openAlert"
+            style="@style/HedvigButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/base_margin_double"
+            android:backgroundTint="@color/purple"
+            android:text="Open an alert" />
 
-    <Button
-        android:id="@+id/openReferralReceiver"
-        style="@style/HedvigButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/base_margin_double"
-        android:backgroundTint="@color/purple"
-        android:text="Open referral receiver" />
+        <Button
+            android:id="@+id/openLoggedIn"
+            style="@style/HedvigButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/base_margin_double"
+            android:backgroundTint="@color/purple"
+            android:text="Open an logged in with Welcome Screen" />
 
-    <Button
-        android:id="@+id/openReferralNotification"
-        style="@style/HedvigButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/base_margin_double"
-        android:backgroundTint="@color/purple"
-        android:text="Open referral notification" />
+        <Button
+            android:id="@+id/openReferralReceiver"
+            style="@style/HedvigButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/base_margin_double"
+            android:backgroundTint="@color/purple"
+            android:text="Open referral receiver" />
 
-</LinearLayout>
+        <Button
+            android:id="@+id/openReferralNotification"
+            style="@style/HedvigButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/base_margin_double"
+            android:backgroundTint="@color/purple"
+            android:text="Open referral notification" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/ProfileField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/base_margin_double">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/token"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Hedvig Token" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+            android:id="@+id/saveToken"
+            style="@style/HedvigButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/base_margin_double"
+            android:backgroundTint="@color/purple"
+            android:text="Save token" />
+
+    </LinearLayout>
+</ScrollView>
