--- a/app/src/main/res/drawable/button_border_purple.xml
+++ b/app/src/main/res/drawable/button_border_purple.xml
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="10dp"
-    android:shape="rectangle">
-    <stroke
-        android:width="1dp"
-        android:color="@color/purple" />
-    <corners android:radius="112dp" />
-</shape>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:color="@color/violet_200"
+    tools:background="@color/white">
+    <item android:id="@android:id/mask">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/violet_200" />
+            <corners android:radius="112dp" />
+        </shape>
+    </item>
+    <item android:id="@android:id/background">
+        <shape
+            android:padding="10dp"
+            android:shape="rectangle">
+            <stroke
+                android:width="1dp"
+                android:color="@color/purple" />
+            <corners android:radius="112dp" />
+        </shape>
+    </item>
+</ripple>
