Finalize the feature

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,4 +29,5 @@
     <color name="transparent">#00FFFFFF</color>
     <color name="violet_100">#efe8ff</color>
     <color name="violet_200">#c1a5ff</color>
+    <color name="coral_500">#ff8a80</color>
 </resources>
