--- a/app/src/main/res/layout/activity_trustly.xml
+++ b/app/src/main/res/layout/activity_trustly.xml
@@ -12,14 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
-        tools:visibility="visible">
+        tools:visibility="gone">
 
         <ImageView
             android:id="@+id/explainerIllustration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@null"
-            app:layout_constraintBottom_toTopOf="@id/explainerTitle"
+            app:layout_constraintBottom_toTopOf="@id/explainerPreHeadline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -27,16 +27,28 @@
             app:srcCompat="@drawable/connect_direct_debit_illustration" />
 
         <TextView
-            android:id="@+id/explainerTitle"
-            style="@style/Header.Large"
+            android:id="@+id/explainerPreHeadline"
+            style="@style/Headline.Large"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/trustly_explainer_illustration_offset"
+            android:text="@string/ONBOARDING_CONNECT_DD_PRE_HEADLINE"
+            android:textColor="@color/purple"
+            app:layout_constraintBottom_toTopOf="@id/explainerTitle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/explainerIllustration" />
+
+        <TextView
+            android:id="@+id/explainerTitle"
+            style="@style/Headline.Large"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ONBOARDING_CONNECT_DD_HEADLINE"
             app:layout_constraintBottom_toTopOf="@id/explainerParagraph"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/explainerIllustration"
-            tools:layout_marginTop="60dp"
-            tools:text="Koppla ditt bankgiro" />
+            app:layout_constraintTop_toBottomOf="@id/explainerPreHeadline" />
 
         <TextView
             android:id="@+id/explainerParagraph"
@@ -47,11 +59,11 @@
             android:gravity="center"
             android:paddingStart="@dimen/base_margin_double"
             android:paddingEnd="@dimen/base_margin_double"
+            android:text="@string/ONBOARDING_CONNECT_DD_BODY"
             app:layout_constraintBottom_toTopOf="@id/explainerButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/explainerTitle"
-            tools:text="För att din försäkring ska gälla framöver behöver du koppla autogiro från din bank så att du kan betala och få utbetalt." />
+            app:layout_constraintTop_toBottomOf="@id/explainerTitle" />
 
         <Button
             android:id="@+id/explainerButton"
@@ -60,103 +72,145 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/base_margin_quintuple"
             android:backgroundTint="@color/purple"
+            android:text="@string/ONBOARDING_CONNECT_DD_CTA"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/explainerParagraph"
-            tools:text="Koppla autogiro" />
+            app:layout_constraintTop_toBottomOf="@id/explainerParagraph" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <WebView
-        android:id="@id/trustlyContainer"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone" />
+        android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/resultScreen"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        tools:visibility="gone">
-
-        <ImageView
-            android:id="@+id/resultIcon"
-            android:layout_width="wrap_content"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:contentDescription="@null"
-            app:layout_constraintBottom_toTopOf="@id/resultTitle"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed"
-            tools:src="@drawable/icon_success" />
-
-        <TextView
-            android:id="@+id/resultTitle"
-            style="@style/TrustlyTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/base_margin_triple"
-            android:gravity="center"
-            app:layout_constraintBottom_toTopOf="@id/resultParagraph"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/resultIcon"
-            tools:text="@string/PROFILE_TRUSTLY_SUCCESS_TITLE" />
-
-        <TextView
-            android:id="@+id/resultParagraph"
-            style="@style/TrustlyParagraph"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/base_margin_triple"
-            android:gravity="center"
-            android:paddingStart="@dimen/base_margin_triple"
-            android:paddingEnd="@dimen/base_margin_triple"
-            app:layout_constraintBottom_toTopOf="@id/resultClose"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/resultTitle"
-            tools:text="@string/PROFILE_TRUSTLY_SUCCESS_DESCRIPTION" />
-
-        <Button
-            android:id="@+id/resultClose"
-            style="@style/HedvigButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/base_margin_triple"
-            android:text="@string/PROFILE_TRUSTLY_CLOSE"
-            app:layout_constraintBottom_toTopOf="@id/resultDoItLater"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/resultParagraph"
-            tools:backgroundTint="@color/green" />
-
-        <Button
-            android:id="@+id/resultDoItLater"
-            style="?attr/borderlessButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/base_margin_triple"
-            android:textAllCaps="false"
-            android:textColor="@color/pink"
-            android:theme="@style/Body.Small.Link.Caution"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/resultClose"
-            tools:text="Gör det senare"
-            tools:visibility="visible" />
+            tools:visibility="visible">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    <include
-        layout="@layout/loading_spinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+                <TextView
+                    style="@style/Headline.Medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start|center_vertical"
+                    android:text="@string/DASHBOARD_SETUP_DIRECT_DEBIT_TITLE" />
+
+                <Button
+                    android:id="@+id/notNow"
+                    style="?attr/borderlessButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:text="@string/TRUSTLY_SKIP_BUTTON"
+                    android:textAllCaps="false"
+                    android:textColor="@color/coral_500"
+                    android:theme="@style/Body.Regular.Link" />
+
+            </FrameLayout>
+
+        </androidx.appcompat.widget.Toolbar>
+
+        <WebView
+            android:id="@id/trustlyContainer"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:visibility="gone" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/resultScreen"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:visibility="gone"
+            tools:visibility="visible">
+
+            <ImageView
+                android:id="@+id/resultIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@null"
+                app:layout_constraintBottom_toTopOf="@id/resultTitle"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="packed"
+                tools:src="@drawable/icon_success" />
+
+            <TextView
+                android:id="@+id/resultTitle"
+                style="@style/TrustlyTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/base_margin_triple"
+                android:gravity="center"
+                app:layout_constraintBottom_toTopOf="@id/resultParagraph"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/resultIcon"
+                tools:text="@string/PROFILE_TRUSTLY_SUCCESS_TITLE" />
+
+            <TextView
+                android:id="@+id/resultParagraph"
+                style="@style/TrustlyParagraph"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/base_margin_triple"
+                android:gravity="center"
+                android:paddingStart="@dimen/base_margin_triple"
+                android:paddingEnd="@dimen/base_margin_triple"
+                app:layout_constraintBottom_toTopOf="@id/resultClose"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/resultTitle"
+                tools:text="@string/PROFILE_TRUSTLY_SUCCESS_DESCRIPTION" />
+
+            <Button
+                android:id="@+id/resultClose"
+                style="@style/HedvigButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/base_margin_triple"
+                android:text="@string/PROFILE_TRUSTLY_CLOSE"
+                app:layout_constraintBottom_toTopOf="@id/resultDoItLater"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/resultParagraph"
+                tools:backgroundTint="@color/green" />
+
+            <Button
+                android:id="@+id/resultDoItLater"
+                style="?attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/base_margin_triple"
+                android:textAllCaps="false"
+                android:textColor="@color/pink"
+                android:theme="@style/Body.Small.Link.Caution"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/resultClose"
+                tools:text="Gör det senare"
+                tools:visibility="visible" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <include
+            layout="@layout/loading_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
+
+    </LinearLayout>
 
 </FrameLayout>
