--- a/app/src/main/res/layout/promotion_code_dialog.xml
+++ b/app/src/main/res/layout/promotion_code_dialog.xml
@@ -2,28 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@drawable/background_rounded_corners"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/base_margin_triple"
-    android:background="@drawable/background_rounded_corners">
+    android:paddingBottom="@dimen/base_margin_triple">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingStart="@dimen/base_margin_quadruple"
-        android:paddingEnd="@dimen/base_margin_quadruple"
+        android:layout_gravity="center"
         android:layout_marginTop="@dimen/base_margin_triple"
         android:layout_marginBottom="@dimen/base_margin"
+        android:paddingStart="@dimen/base_margin_quadruple"
+        android:paddingEnd="@dimen/base_margin_quadruple"
         android:text="@string/REFERRAL_ADDCOUPON_HEADLINE"
-        android:layout_gravity="center"
         android:theme="@style/Headline.Large" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/base_margin"
-        android:text="@string/REFERRAL_ADDCOUPON_BODY"
-        android:gravity="center"
         android:layout_gravity="center"
+        android:layout_marginTop="@dimen/base_margin"
+        android:gravity="center"
+        android:text="@string/REFERRAL_ADDCOUPON_BODY"
         android:theme="@style/Body.Small" />
 
     <EditText
@@ -31,11 +31,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_quadruple"
-        android:layout_marginEnd="@dimen/base_margin_quadruple"
         android:layout_marginTop="@dimen/base_margin_triple"
+        android:layout_marginEnd="@dimen/base_margin_quadruple"
         android:background="@drawable/background_edit_text_rounded_corners"
         android:hint="@string/REFERRAL_ADDCOUPON_INPUTPLACEHOLDER"
         android:imeOptions="actionDone"
+        android:inputType="textNoSuggestions"
         android:lines="1"
         android:padding="@dimen/base_margin_double"
         android:singleLine="true" />
@@ -58,8 +59,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginStart="@dimen/base_margin_quadruple"
-        android:layout_marginEnd="@dimen/base_margin_quadruple"
         android:layout_marginTop="@dimen/base_margin_quadruple"
+        android:layout_marginEnd="@dimen/base_margin_quadruple"
         android:backgroundTint="@color/purple"
         android:text="@string/REFERRAL_ADDCOUPON_BTN_SUBMIT" />
 
@@ -67,10 +68,10 @@
         android:id="@+id/bottomSheetPromotionCodeTermsAndCondition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingStart="@dimen/base_margin_quadruple"
-        android:paddingEnd="@dimen/base_margin_quadruple"
         android:layout_marginTop="@dimen/base_margin_double"
         android:gravity="center"
+        android:paddingStart="@dimen/base_margin_quadruple"
+        android:paddingEnd="@dimen/base_margin_quadruple"
         android:text="@string/REFERRAL_ADDCOUPON_TC_EXPLANATION_ANDROID"
         android:theme="@style/Body.Small" />
 
@@ -78,9 +79,9 @@
         android:id="@+id/bottomSheetPromotionCodeTermsAndConditionLink"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginTop="@dimen/base_margin"
         android:gravity="center"
-        android:layout_gravity="center"
         android:text="@string/REFERRAL_ADDCOUPON_TC_LINK"
         android:theme="@style/Body.Small.Link" />
 
