WIP New Payment Screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,4 +30,6 @@
     <color name="violet_100">#efe8ff</color>
     <color name="violet_200">#c1a5ff</color>
     <color name="coral_500">#ff8a80</color>
+    <color name="coral_200">#ffd0cc</color>
+    <color name="sunflower_300">#fbe356</color>
 </resources>
