--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".feature.profile.ui.payment.PaymentActivity">
 
     <include layout="@layout/app_bar" />
 
@@ -21,117 +22,159 @@
 
             <include layout="@layout/loading_spinner" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@id/sphereContainer"
-                android:layout_width="wrap_content"
+            <com.hedvig.app.ui.view.HedvigCardView
+                android:id="@+id/failedPaymentsCard"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/base_margin_triple"
+                android:layout_marginStart="@dimen/base_margin_double"
+                android:layout_marginTop="@dimen/base_margin_double"
+                android:layout_marginEnd="@dimen/base_margin_double"
                 android:visibility="gone"
                 tools:visibility="visible">
 
-                <ImageView
-                    android:id="@id/priceSphere"
-                    android:layout_width="@dimen/profile_sphere_side_length"
-                    android:layout_height="@dimen/profile_sphere_side_length"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentEnd="true"
-                    android:contentDescription="@null"
-                    android:tint="@color/green"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/sphere" />
-
-                <TextView
-                    android:id="@+id/profile_payment_amount"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/soray_extrabold"
-                    android:gravity="center_horizontal"
-                    android:lines="2"
-                    android:textColor="@color/off_black_dark"
-                    android:textSize="48sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="129" />
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/constraintLayout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/sub_sphere_offset"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent">
+                    android:background="@color/coral_200"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/base_margin_double">
 
                     <ImageView
-                        android:id="@id/deductibleSphere"
-                        android:layout_width="@dimen/sub_sphere_size"
-                        android:layout_height="@dimen/sub_sphere_size"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentEnd="true"
+                        android:layout_width="@dimen/icon_failure_small_size"
+                        android:layout_height="@dimen/icon_failure_small_size"
                         android:contentDescription="@null"
-                        android:tint="@color/dark_green"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/sphere" />
+                        app:srcCompat="@drawable/icon_failure" />
 
                     <TextView
-                        style="@style/Body.Small.Negative"
+                        android:id="@+id/failedPaymentsParagraph"
+                        style="@style/Body.Small"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:gravity="center_horizontal"
-                        android:lineSpacingExtra="0sp"
-                        android:lines="2"
-                        android:text="@string/PROFILE_PAYMENT_DEDUCTIBLE_BUBBLE"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        android:layout_marginStart="@dimen/base_margin"
+                        tools:text="Du ligger 3 månader efter med dina betalningar. Vi kommer att dra mer pengar än din odinarie premie den 21 juni, 2019." />
 
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                </LinearLayout>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </com.hedvig.app.ui.view.HedvigCardView>
 
+            <!-- We need to prevent corner overlap here -->
 
-            <LinearLayout
-                android:id="@+id/freeUntilContainer"
+            <com.hedvig.app.ui.view.HedvigCardView
+                android:id="@+id/nextPaymentCard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/base_margin"
-                android:layout_marginTop="@dimen/base_margin_triple"
-                android:layout_marginEnd="@dimen/base_margin"
-                android:background="@drawable/background_rounded_corners_pink"
-                android:orientation="vertical"
-                android:padding="@dimen/base_margin_double">
+                android:layout_marginStart="@dimen/base_margin_double"
+                android:layout_marginTop="@dimen/base_margin_double"
+                android:layout_marginEnd="@dimen/base_margin_double">
 
-                <TextView
-                    android:id="@+id/freeUntilText"
-                    style="@style/Headline.Medium"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:text="@string/PROFILE_PAYMENT_FREE_UNTIL_LABEL" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:clipChildren="true"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/freeUntilMessage"
-                    style="@style/Body.Small"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/base_margin_half"
-                    android:gravity="center"
-                    tools:text="@string/PROFILE_PAYMENT_FREE_UNTIL_MESSAGE" />
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/background_top_rounded_corners"
+                        android:orientation="vertical"
+                        android:paddingStart="@dimen/base_margin_double"
+                        android:paddingTop="@dimen/base_margin_double"
+                        android:paddingEnd="@dimen/base_margin_double"
+                        android:paddingBottom="@dimen/base_margin">
 
-            </LinearLayout>
+                        <TextView
+                            android:id="@+id/nextPaymentLabel"
+                            style="@style/Body.Small.Negative"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:text="Nästa betalning" />
+
+                        <TextView
+                            android:id="@+id/nextPaymentAmount"
+                            style="@style/Header.Large.Negative"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/base_margin"
+                            app:layout_constraintTop_toBottomOf="@id/nextPaymentLabel"
+                            tools:text="139 kr" />
+
+                        <TextView
+                            android:id="@+id/nextPaymentGross"
+                            style="@style/Body.Small.Negative"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:visibility="invisible"
+                            app:layout_constraintTop_toBottomOf="@id/nextPaymentAmount"
+                            tools:text="179 kr/mån"
+                            tools:visibility="visible" />
+
+                        <FrameLayout
+                            android:id="@+id/freeMonthsSphere"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:background="@drawable/sphere"
+                            android:backgroundTint="@color/coral_500"
+                            android:visibility="gone"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:visibility="visible">
+
+                            <TextView
+                                android:id="@+id/freeMonths"
+                                style="@style/Body.XSmall.Negative"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:gravity="center"
+                                android:lineSpacingExtra="0sp"
+                                tools:text="3\nGratis\nmånader" />
+
+
+                        </FrameLayout>
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/base_margin_double"
+                        android:layout_marginBottom="@dimen/base_margin_double">
+
+                        <TextView
+                            android:id="@+id/nextPaymentDateLabel"
+                            style="@style/Body.Small"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/base_margin_double"
+                            tools:text="Datum" />
+
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+
+                        <TextView
+                            android:id="@+id/nextPaymentDate"
+                            style="@style/Body.Small"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="@dimen/base_margin_double"
+                            android:background="@drawable/rounded_corners_background_light_gray"
+                            android:paddingStart="@dimen/base_margin"
+                            android:paddingTop="@dimen/base_margin_half"
+                            android:paddingEnd="@dimen/base_margin"
+                            android:paddingBottom="@dimen/base_margin_half"
+                            tools:text="2019-06-27" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+
+            </com.hedvig.app.ui.view.HedvigCardView>
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@id/connectBankAccountContainer"
@@ -151,24 +194,24 @@
 
                     <TextView
                         android:id="@id/cardTitle"
+                        style="@style/Headline.Small"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/base_margin_triple"
                         android:layout_marginTop="@dimen/base_margin_triple"
                         android:text="@string/PROFILE_PAYMENT_CONNECT_DIRECT_DEBIT_TITLE"
-                        android:theme="@style/Headline.Small"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@id/cardParagraph"
+                        style="@style/Body.Small"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="@dimen/base_margin"
                         android:layout_marginEnd="20dp"
                         android:text="@string/PROFILE_PAYMENT_CONNECT_DIRECT_DEBIT_DESCRIPTION"
-                        android:theme="@style/Body.Small"
                         app:layout_constraintTop_toBottomOf="@id/cardTitle" />
 
                     <View
@@ -206,74 +249,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/sphereContainer"
                 tools:visibility="visible">
-
-                <TextView
-                    style="@style/Headline.Medium"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:text="@string/PROFILE_PAYMENT_SECTION_TITLE" />
-
-                <TextView
-                    android:id="@+id/autogiroTitle"
-                    style="@style/Body.Small"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/base_margin_double"
-                    android:text="@string/PROFILE_PAYMENT_DIRECT_DEBIT_LABEL" />
-
-                <TextView
-                    android:id="@id/autogiroDate"
-                    style="@style/Body.Regular.Emphasized"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/base_margin"
-                    tools:text="Nästa dras 2019-02-27" />
-
-                <TextView
-                    style="@style/Body.Small"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/base_margin_triple"
-                    android:text="@string/PROFILE_PAYMENT_PRICE_LABEL" />
-
-                <TextView
-                    android:id="@+id/grossPremium"
-                    style="@style/Body.Regular.Emphasized"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/base_margin"
-                    tools:text="179 kr/mån" />
-
-                <TextView
-                    style="@style/Body.Small"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/base_margin_triple"
-                    android:text="@string/PROFILE_PAYMENT_DISCOUNT_LABEL" />
-
-                <TextView
-                    android:id="@+id/discount"
-                    style="@style/Body.Regular.Emphasized"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/base_margin"
-                    tools:text="-30 kr/mån" />
-
-                <TextView
-                    style="@style/Body.Small"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/base_margin_triple"
-                    android:text="@string/PROFILE_PAYMENT_FINAL_COST_LABEL" />
-
-                <TextView
-                    android:id="@+id/netPremium"
-                    style="@style/Body.Regular.Emphasized"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/base_margin"
-                    tools:text="149 kr/mån" />
 
                 <TextView
                     android:id="@+id/bankTitle"
