--- a/app/src/main/res/values/text_styles.xml
+++ b/app/src/main/res/values/text_styles.xml
@@ -21,6 +21,10 @@
         <item name="android:textSize">@dimen/text_xxlarge</item>
     </style>
 
+    <style name="Header.Large.Negative">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="Header.Regular">
         <item name="android:textSize">@dimen/text_large</item>
     </style>
